# llm_playground

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
configs/: judge_llm.yaml
notebook/: eval_sft.ipynb  model_data_prepare.ipynb  sft_prepare.ipynb
scripts/: judge_llm.py  train.sh  train_sft.py
