[project]
name = "llm-playground"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.12.0",
    "bitsandbytes>=0.49.2",
    "datasets>=4.6.0",
    "deepspeed>=0.18.6",
    "evaluate>=0.4.6",
    "pandas>=3.0.1",
    "peft>=0.18.1",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.8.0",
    "tensorboard>=2.20.0",
    "torch>=2.10.0",
    "tqdm>=4.67.3",
    "transformers>=5.2.0",
    "trl>=0.29.0",
]
